Fixed: wflow-consoleweb - Builder - button tooltip not showing correctly. @6.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/dbuilder.css
+++ b/wflow-consoleweb/src/main/webapp/css/dbuilder.css
@@ -91,7 +91,7 @@
     color: black;
     font-size: 13px;
     height: 20px;
-    min-width: 20px;
+    width: 20px;
     line-height: 15px;
     padding: 0px;
     margin-top: 2px;
@@ -107,7 +107,6 @@
     -moz-border-radius: 10px 10px 10px 10px;
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    overflow: hidden;
 }
 .form-palette-options button span{
     width:0px;
@@ -124,6 +123,7 @@
     position: absolute;
     width: auto;
     margin-left: -15%;
+    white-space: nowrap;
 }
 .form-palette-options button:hover {
     padding: 0 4px;
