--- a/wflow-consoleweb/src/main/webapp/css/ubuilder.css
+++ b/wflow-consoleweb/src/main/webapp/css/ubuilder.css
@@ -233,7 +233,7 @@
     color: black;
     font-size: 13px;
     height: 20px;
-    min-width: 20px;
+    width: 20px;
     line-height: 15px;
     padding: 0px;
     margin-top: 2px;
@@ -251,7 +251,6 @@
     -moz-border-radius: 10px 10px 10px 10px;
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    overflow: hidden;
 }
 .element-options button span{
     width:0px;
@@ -268,6 +267,7 @@
     position: absolute;
     width: auto;
     margin-left: -25%;
+    white-space: nowrap;
 }
 .element-options button:hover {
     padding: 0 4px;
